--- a/docs/0.7/Advanced configuration.md.hbs
+++ b/docs/0.7/Advanced configuration.md.hbs
@@ -53,7 +53,7 @@ The value for a named partial can also be specified using a function:
 new Ractive({
 	template: '<div>\{{>dynamicPartial}}</div>',
 	partials: {
-		dyanamicPartial: function ( data ) {
+		dynamicPartial: function ( data ) {
 			return data.condition ? '<p>hello world</p>' : '<div>yes, we have no foo</div>';
 		}
 	}
@@ -69,7 +69,7 @@ return the value from the ractive instance:
 
 ```js
 	partials: {
-		dyanamicPartial: function ( data ) {
+		dynamicPartial: function ( data ) {
 			// assuming data.partial is the string token of a registered partial:
 			return this.partials[data.partial];
 		}
@@ -88,7 +88,7 @@ Ractive.components.view2 = Ractive.extend({...});
 new Ractive({
 	template: '<div><dynamicComponent/></div>',
 	components: {
-		dyanamicComponent: function ( data ) {
+		dynamicComponent: function ( data ) {
 			return data.foo ? 'view1' : 'view2';
 		}
 	}
