--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -147,6 +147,7 @@
 
 	<ul>
 		<li><a href='../edge'>edge</a></li>
+		<li><a href='../0.7'>0.7</a></li>
 		<li><a href='../0.6'>0.6</a></li>
 		<li><a href='../0.5'>0.5</a></li>
 		<li><a href='../0.4.0'>0.4.0</a></li>
