--- a/docs/0.6/Get started.md.hbs
+++ b/docs/0.6/Get started.md.hbs
@@ -28,6 +28,6 @@ all the available options.
 
 If you get stuck at any point, visit the {{{createLink 'Get support'}}} page to find help.
 
-*Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5.x)*
+*Documentation for previous versions: [0.3.9](../0.3.9), [0.4.0](../0.4.0), [0.5.x](../0.5)*
 
 *Documentation for edge version: [edge](../edge)*
