Add Ractive-Require plugin reference
Add the "Components" section.

--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -49,3 +49,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
 * [Slide](http://ractivejs.github.io/ractive-transitions-slide)
 * [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
+
+## {{{createLink 'Components'}}}
+
+* [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
