--- a/docs/0.7/Observers.md.hbs
+++ b/docs/0.7/Observers.md.hbs
@@ -150,7 +150,7 @@ ractive.set('config.allowEdit', true);
 
 ```
 
-In addition to `newValue`, `oldValue`, and `keypath`, any wildcards that are matched in the `keypath` will be passed to the callback. Each additional wildcard will cause an extra parameter to be passed to the callback. For instance:
+In addition to `newValue`, `oldValue`, and `keypath`, any widlcards that are matched in the `keypath` will be passed to the callback. Each additional wildcard will cause an extra parameter to be passed to the callback. For instance:
 ```js
 ractive.observe('items.*.*', function(newValue, oldValue, keypath, idx, key) {
   console.log('item', idx, key, 'is now', newValue);
@@ -159,7 +159,7 @@ ractive.set('items.1.foo', 'bar');
 // logs 'item 1 foo is now bar'
 ```
 
-Pattern observers are a simple and flexible that will allow you to observe your data any way that you want.
+Pattern observers are simple and flexible tools and will allow you to observe your data any way that you want.
 
 ## Space Delimited Observers
 
