--- a/docs/0.7/Partials.md.hbs
+++ b/docs/0.7/Partials.md.hbs
@@ -58,7 +58,7 @@ Equally, you can make partials globally available by adding them to {{{createLin
 Ractive.partials.thumbnail = myThumbnailPartial;
 ```
 
-Again, this can be a string template, parsed template, or a function that returns either of this - if a string, it will be parsed when it first gets used and stored as a parsed template thereafter.
+Again, this can be a string template, parsed template, or a function that returns either of those - if a string, it will be parsed when it first gets used and stored as a parsed template thereafter.
 
 
 ### As a script tag
