--- a/docs/edge/Partials.md.hbs
+++ b/docs/edge/Partials.md.hbs
@@ -135,7 +135,7 @@ Result:
 
 
 <a name="expressions"></a>
-## Parial expressions
+## Partial expressions
 
 Partial references may be a name that already exists as a partial, or they may also be any expression that resolves to a partial name. This can be used to select an appropriate partial based on the current context and more. The full power of Ractive's {{{createLink 'expressions'}}} are available. If the value of the expression changes, the partial fragment will be re-rendered using the new partial.
 
