Added CodeMirror plugin

--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -53,3 +53,4 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 ## {{{createLink 'Components'}}}
 
 * [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
+* [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
