--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -15,6 +15,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [RxJS](http://ractivejs.github.io/ractive-adaptors-rxjs/)
 * [Ractive](https://github.com/rstacruz/ractive-ractive) (synchronise several Ractive instances) - contributed by [@rstacruz](https://github.com/rstacruz)
 * [ss-ractive](https://github.com/arxpoetica/ss-ractive) (Ractive Template Engine wrapper for [SocketStream](https://github.com/socketstream/socketstream)) - by Robert Hall [@arxpoetica](https://github.com/arxpoetica)
+* [Stapes](https://github.com/dwightjack/ractive-adaptors-stapes) - contributed by [@dwightjack](https://github.com/dwightjack)
 * TODO: Object.observe
 
 
