--- a/docs/0.7/Options.md.hbs
+++ b/docs/0.7/Options.md.hbs
@@ -106,7 +106,7 @@ ractive.myMethod(); // triggers the alert
 > components: {
 >     'my-component': Ractive.extend({
 >         template: '#componentTemplate',
->         init: function () {...}
+>         onrender: function () {...}
 >     })
 > }
 > ```
