--- a/docs/0.7/Advanced configuration.md.hbs
+++ b/docs/0.7/Advanced configuration.md.hbs
@@ -151,13 +151,43 @@ Ractive will print a warning to the console if this happens, suggesting that you
 A data option function can be a handy way to fetch asynchronous data _and_ supply initial synchronous values:
 
 ```js
-data: function () {
-  $.get( 'somedata.url', function( data ) {
-    this.set( '', data );
-  }.bind(this) );
+var SelfLoadingComponent = Ractive.extend({
+  template: '...',
+  data: function () {
+    var instance = this;
+    
+    // we have to wait until *after* the instance has been
+    // initialised, otherwise this will fail!
+    setTimeout( function () {
+      var url = 'http://api.example.com/records/' + instance.get( 'id' ) + '.json';
+      
+      // here we're using window.fetch - coming soon to a browser near you.
+      // see https://github.com/github/fetch for more info
+      fetch( url )
+        .then( function ( response ) {
+          return response.json();
+        })
+        .then( function ( record ) {
+          instance.set({
+            loaded: true,
+            record: record
+          });
+        });
+    });
+  
+    // until the AJAX request succeeds, this is
+    // what the component will show
+    return {
+      loaded: false,
+      record: null
+    };
+  }
+});
 
-  return {
-    foo: 'default'
-  };
-}
+var ractive = new SelfLoadingComponent({
+  el: '...',
+  data: {
+    id: '123xyz'
+  }
+});
 ```
