--- a/docs/0.7/ractive.findContainer().md.hbs
+++ b/docs/0.7/ractive.findContainer().md.hbs
@@ -1,11 +1,11 @@
 ---
 title: ractive.findContainer()
 ---
-Returns the first container of this component instance with the given `name`.
+Returns the first container component with the given `name`.
 
 
 > ### ractive.findContainer( name )
-> Returns the first container of this component with the given `name`.
+> Returns the first container component with the given `name`, starting from a component instance. If `name` matches the calling component, the calling component is returned.
 
 > > #### **name** *`String`*
 > > The name of the container to find
