--- a/docs/0.7/ractive.findParent().md.hbs
+++ b/docs/0.7/ractive.findParent().md.hbs
@@ -1,11 +1,11 @@
 ---
 title: ractive.findParent()
 ---
-Returns the first parent of this component instance with the given `name`.
+Returns the first parent component with the given `name`.
 
 
 > ### ractive.findParent( name )
-> Returns the first parent of this component with the given `name`.
+> Returns the first parent component with the given `name`. See {{{createLink 'ractive-findcontainer' 'findcontainer'}}} to include calling component instance in search.
 
 > > #### **name** *`String`*
 > > The name of the parent to find
