Added Bootstrap Plugin

--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -56,3 +56,4 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 
 * [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
 * [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
+* [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
