initialisation options -> options

--- a/docs/0.7/new Ractive({...}).md.hbs
+++ b/docs/0.7/new Ractive({...}).md.hbs
@@ -31,7 +31,7 @@ var MyRactive = Ractive.extend({
 	template: '#mytemplate'
 });
 ```
-The same {{{createLink 'Options' 'initialisation options'}}} can be supplied to the extend method, plus some additional options.
+The same {{{createLink 'options' 'initialisation options'}}} can be supplied to the extend method, plus some additional options.
 
 These are instantiated in exactly the same way as above, supplying any additional options:
 
