--- a/docs/0.7/Array modification.md.hbs
+++ b/docs/0.7/Array modification.md.hbs
@@ -25,7 +25,7 @@ ractive = new Ractive({
 list.push( 'd' ); // adds a new list item - <li>d</li>
 ```
 
-You can disable this behaviour by passing in `modifyArrays: false` as an {{{createLink 'initialisation Options'}}}
+You can disable this behaviour by passing in `modifyArrays: false` as an {{{createLink 'options' 'initialisation options'}}}
 
 
 ## How it works
