--- a/docs/0.7/Components.md.hbs
+++ b/docs/0.7/Components.md.hbs
@@ -14,7 +14,7 @@ First, you need to **create the component** with {{{createLink 'Ractive.extend()
 
 ## <a name="init"></a>Initialisation Options
 
-Most of the normal Ractive {{{ createLink 'initialisation options' }}} also apply to components, particularly the {{{ createLink 'lifecycle events' }}}, a few of which are listed here.
+Most of the normal Ractive {{{ createLink 'options' 'initialisation options' }}} also apply to components, particularly the {{{ createLink 'lifecycle events' }}}, a few of which are listed here.
 
 ### onconstruct *`Function`*
 
