--- a/docs/0.7/Mustaches.md.hbs
+++ b/docs/0.7/Mustaches.md.hbs
@@ -440,7 +440,7 @@ In addition to Mustache-style conditional and iterative sections, Ractive adds H
 <button on-click="flip">Flip Coin</button>
 <p>Coin flip result: \{{#if heads}}heads\{{else}}tails\{{/if}}</p>
 <ul>
-  \{{#each result}}
+  \{{#each results}}
     <li>\{{.}}</li>
   \{{else}}
     <li>No results yet...</li>
