Add ractive-tooltip, ractive-datatable to list of Plugins

--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -18,6 +18,13 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Stapes](https://github.com/dwightjack/ractive-adaptors-stapes) - contributed by [@dwightjack](https://github.com/dwightjack)
 * TODO: Object.observe
 
+## {{{createLink 'Components'}}}
+
+* [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
+* [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
+* [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
+* [Datatable](https://github.com/JonDum/ractive-datatable)
+
 
 ## {{{createLink 'Decorators'}}}
 
@@ -25,6 +32,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
 * [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
+* [Tooltip](http://github.com/JonDum/ractive-tooltip)
 
 
 ## {{{createLink 'Events'}}}
@@ -52,8 +60,3 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [SlideHorizontal](https://github.com/zenflow/ractive-transitions-slidehorizontal) - contributed by [@zenflow](https://github.com/zenflow)
 * [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
 
-## {{{createLink 'Components'}}}
-
-* [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
-* [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
-* [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
