--- a/docs/edge/Plugins.md.hbs
+++ b/docs/edge/Plugins.md.hbs
@@ -17,6 +17,12 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [ss-ractive](https://github.com/arxpoetica/ss-ractive) (Ractive Template Engine wrapper for [SocketStream](https://github.com/socketstream/socketstream)) - by Robert Hall [@arxpoetica](https://github.com/arxpoetica)
 * TODO: Object.observe
 
+## {{{createLink 'Components'}}}
+
+* [Ractive-Require](https://github.com/XavierBoubert/ractive-require)
+* [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
+* [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
+* [Datatable](https://github.com/JonDum/ractive-datatable)
 
 ## {{{createLink 'Decorators'}}}
 
@@ -24,6 +30,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [minmaxwidth](https://github.com/cfenzo/Ractive-decorators-minmaxwidth) - contributed by [@cfenzo](https://github.com/cfenzo)
 * [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
+* [Tooltip](http://github.com/JonDum/ractive-tooltip)
 
 
 ## {{{createLink 'Events'}}}
@@ -41,7 +48,6 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Viewport](https://github.com/svapreddy/ractive-event-viewport) - contributed by [@svapreddy](https://github.com/svapreddy)
 
 
-
 ## {{{createLink 'Transitions'}}}
 
 * [Fade](http://ractivejs.github.io/ractive-transitions-fade)
@@ -49,3 +55,5 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Scale](https://github.com/1N50MN14/Ractive-transitions-scale) - contributed by [@1N50MN14](https://github.com/1N50MN14)
 * [Slide](http://ractivejs.github.io/ractive-transitions-slide)
 * [Typewriter](http://ractivejs.github.io/ractive-transitions-typewriter)
+
+
