--- a/templates/edge/partials/left-nav.md.hbs
+++ b/templates/edge/partials/left-nav.md.hbs
@@ -7,6 +7,7 @@
 		<li>{{{createLink 'Contributing'}}}</li>
 		<li>{{{createLink 'Get started with node.js'}}}</li>
 		<li>{{{createLink 'Migrating' 'Migrating from previous versions'}}}</li>
+		<li>{{{createLink 'CSP'}}}</li>
 	</ul>
 </section>
 
