add spoilerBox plugin

--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -33,6 +33,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [Select2](http://prezent.github.io/ractive-decorators-select2/) - contributed by [@sandermarechal](https://github.com/sandermarechal) ([@Prezent](https://github.com/Prezent))
 * [Sortable](http://ractivejs.github.io/Ractive-decorators-sortable/)
 * [Tooltip](http://github.com/JonDum/ractive-tooltip)
+* [spoilerBox](https://github.com/idis-fhws/ractive-decorators-spoilerBox) - contributed by [@idis-fhws](https://github.com/idis-fhws)
 
 
 ## {{{createLink 'Events'}}}
