--- a/docs/0.7/Plugins.md.hbs
+++ b/docs/0.7/Plugins.md.hbs
@@ -38,6 +38,7 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 
 ## {{{createLink 'Events'}}}
 
+* [Bootstrap Tags Input](https://github.com/Performante/ractive-events-bootstraptags) - contributed by [@boberro](https://github.com/boberro)
 * [Drag and Drop (HTML5)](https://github.com/Nijikokun/ractive.drag.drop.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
 * [Drag and Drop (non-HTML5)](https://github.com/smallhadroncollider/ractive.events.drag) - contributed by [@smallhadroncollider](https://github.com/smallhadroncollider)
 * [Drag and Drop Sortable List](https://github.com/Nijikokun/ractive.sortable.js) - contributed by [@Nijikokun](https://github.com/Nijikokun)
