Fix typo in partials docs

--- a/docs/0.7/Partials.md.hbs
+++ b/docs/0.7/Partials.md.hbs
@@ -155,7 +155,7 @@ If a partial expression is a simple reference and a partial exists with the same
 \{{/partial animal}}
 ```
 
-This example uses a combination of patial expressions and restricted references in the iteration of `list` to render a different template based on the `type` of item in the list. If there was an item `{ type: 'person', name: 'John', pronoun: 'He', fingerCount: 9 }` in the list, its output would be `John is a person. He has 9 fingers.`. `{ type: 'animal', name: 'Alfred', specie: 'starfish', pronoun: 'It', legCount: 5 }` would output `Alfred is a starfish. It has 5 legs.`.
+This example uses a combination of partial expressions and restricted references in the iteration of `list` to render a different template based on the `type` of item in the list. If there was an item `{ type: 'person', name: 'John', pronoun: 'He', fingerCount: 9 }` in the list, its output would be `John is a person. He has 9 fingers.`. `{ type: 'animal', name: 'Alfred', specie: 'starfish', pronoun: 'It', legCount: 5 }` would output `Alfred is a starfish. It has 5 legs.`.
 
 #### Example: Partials on-the-fly
 
