Add stepper, select component to plugins page

--- a/docs/edge/Plugins.md.hbs
+++ b/docs/edge/Plugins.md.hbs
@@ -23,6 +23,8 @@ plugin API pages under "Writing" and the [plugin template](https://github.com/Ra
 * [CodeMirror](http://dagnelies.github.io/ractive-codemirror/)
 * [Bootstrap](http://dagnelies.github.io/ractive-bootstrap/)
 * [Datatable](https://github.com/JonDum/ractive-datatable)
+* [Select](https://github.com/JonDum/ractive-select) a `<select>` replacement component
+* [Stepper](https://github.com/JonDum/ractive-stepper) a numeric stepper component
 
 ## {{{createLink 'Decorators'}}}
 
