Added "See also: ractive.subtract()"

--- a/docs/0.7/ractive.add().md.hbs
+++ b/docs/0.7/ractive.add().md.hbs
@@ -12,3 +12,5 @@ Increments the selected {{{createLink 'keypaths' 'keypath'}}}.
 
 > > #### number
 > > Defaults to `1`. The number to increment by
+
+*See also: {{{createLink 'ractive-subtract' 'ractive.subtract()'}}}*
