Added "See also: ractive.add()"

--- a/docs/0.7/ractive.subtract().md.hbs
+++ b/docs/0.7/ractive.subtract().md.hbs
@@ -12,3 +12,5 @@ Decrements the selected {{{createLink 'keypaths' 'keypath'}}}.
 
 > > #### number
 > > Defaults to `1`. The number to decrement by
+
+*See also: {{{createLink 'ractive-add' 'ractive.add()'}}}*
