--- a/docs/0.7/References.md.hbs
+++ b/docs/0.7/References.md.hbs
@@ -179,3 +179,6 @@ The above example could also use a root reference:
 </ul>
 ```
 
+Note that inside components, the root references refer to the component's root, not the main ractive instance root.
+
+
